<resources xmlns:tools="http://schemas.android.com/tools"  xmlns:moz="http://mozac.org/tools">
    <string name="app_name_private_5">Private %s</string>
    <string name="app_name_private_4">%s (Private)</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_private_browsing_button">Enable private browsing</string>
    <string name="content_description_disable_private_browsing_button">Disable private browsing</string>
    <string name="search_hint">Search or enter address</string>
    <string name="no_open_tabs_description">Your open tabs will be shown here.</string>
    <string name="no_private_tabs_description">Your private tabs will be shown here.</string>
    <string name="open_tab_tray_single" moz:removedIn="96" tools:ignore="UnusedResources">1 open tab. Tap to switch tabs.</string>
    <string name="open_tab_tray_plural" moz:removedIn="95" tools:ignore="UnusedResources">%1$s open tabs. Tap to switch tabs.</string>
    <string name="tab_tray_multi_select_title">%1$d selected</string>
    <string name="tab_tray_add_new_collection">Add new collection</string>
    <string name="tab_tray_add_new_collection_name">Name</string>
    <string name="tab_tray_select_collection">Select collection</string>
    <string name="tab_tray_close_multiselect_content_description">Exit multiselect mode</string>
    <string name="tabs_screen_close_screen_description">Close tabs screen</string>
    <string name="tab_tray_collection_button_multiselect_content_description">Save selected tabs to collection</string>
    <string name="tab_tray_item_selected_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Selected %1$s</string>
    <string name="tab_tray_item_unselected_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Unselected %1$s</string>
    <string name="tab_tray_exit_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Exited multiselect mode</string>
    <string name="tab_tray_enter_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Entered multiselect mode, select tabs to save to a collection</string>
    <string name="tab_tray_multiselect_selected_content_description">Selected</string>
    <string name="recently_saved_bookmarks" moz:removedIn="94" tools:ignore="UnusedResources">Recently saved</string>
    <string name="recently_bookmarked" moz:removedIn="94" tools:ignore="UnusedResources">Recently bookmarked</string>
    <string name="recent_bookmarks_title">Recent bookmarks</string>
    <string name="recently_saved_bookmarks_content_description">Recently saved bookmarks</string>
    <string name="recently_saved_show_all">Show all</string>
    <string name="recently_saved_show_all_content_description">Show all saved bookmarks button</string>
    <string name="about_content">%1$s is produced by @fork-maintainers.</string>
    <string name="private_browsing_title" moz:removedIn="96" tools:ignore="UnusedResources">You’re in a private session</string>
    <string name="private_browsing_placeholder_description_2">
        %1$s clears your search and browsing history from private tabs when you close them or quit the app. While this doesn’t make you anonymous to websites or your internet service provider, it makes it easier to keep what you do online private from anyone else who uses this device.</string>
    <string name="private_browsing_common_myths">
       Common myths about private browsing
    </string>
    <string name="private_browsing_delete_session" moz:removedIn="96" tools:ignore="UnusedResources">Delete session</string>
    <string name="cfr_message">Add a shortcut to open private tabs from your Home screen.</string>
    <string name="cfr_pos_button_text">Add shortcut</string>
    <string name="cfr_neg_button_text">No thanks</string>
    <string name="open_in_app_cfr_info_message">You can set Firefox to automatically open links in apps.</string>
    <string name="open_in_app_cfr_positive_button_text">Go to settings</string>
    <string name="open_in_app_cfr_negative_button_text">Dismiss</string>
    <string name="camera_permissions_needed_message">Camera access needed. Go to Android settings, tap permissions, and tap allow.</string>
    <string name="camera_permissions_needed_positive_button_text">Go to settings</string>
    <string name="camera_permissions_needed_negative_button_text">Dismiss</string>
    <string name="tab_tray_close_tabs_banner_message">Set open tabs to close automatically that haven’t been viewed in the past day, week, or month.</string>
    <string name="tab_tray_close_tabs_banner_positive_button_text">View options</string>
    <string name="tab_tray_close_tabs_banner_negative_button_text">Dismiss</string>
    <string name="tab_tray_inactive_onboarding_message">Tabs you haven’t viewed for two weeks get moved here.</string>
    <string name="tab_tray_inactive_onboarding_button_text">Turn off in settings</string>
    <string name="tab_tray_inactive_auto_close_title">Auto-close after one month?</string>
    <string name="tab_tray_inactive_auto_close_body">Firefox can close tabs you haven’t viewed over the past month.</string>
    <string name="tab_tray_inactive_auto_close_button_content_description">Close</string>
    <string name="tab_tray_inactive_turn_on_auto_close_button" moz:removedIn="95" tools:ignore="UnusedResources">Turn on auto close</string>
    <string name="tab_tray_inactive_turn_on_auto_close_button_2">Turn on auto-close</string>
    <string name="home_screen_shortcut_open_new_tab_2">New tab</string>
    <string name="home_screen_shortcut_open_new_private_tab_2">New private tab</string>
    <string name="home_screen_top_sites_heading" moz:removedIn="95" tools:ignore="UnusedResources">Top sites</string>
    <string name="recent_tabs_header">Jump back in</string>
    <string name="recent_tabs_show_all">Show all</string>
    <string name="recent_tabs_show_all_content_description">Show all recent tabs button</string>
    <string name="recent_tabs_search_term">Your search for \"%1$s\"</string>
    <string name="recent_tabs_search_term_count" moz:removedIn="96" tools:ignore="UnusedResources">Sites: %1$s</string>
    <string name="recent_tabs_search_term_count_2">%d sites</string>
    <string name="history_metadata_header" moz:removedIn="94" tools:ignore="UnusedResources">Past explorations</string>
    <string name="history_metadata_header_2">Recently visited</string>
    <string name="history_metadata_header_3" moz:removedIn="96" tools:ignore="UnusedResources">Recent searches</string>
    <string name="recently_visited_menu_item_remove">Remove</string>
    <string name="past_explorations_show_all_content_description">Show all past explorations button</string>
    <string name="browser_tabs_button" moz:removedIn="96" tools:ignore="UnusedResources">Open Tabs</string>
    <string name="browser_menu_back">Back</string>
    <string name="browser_menu_forward">Forward</string>
    <string name="browser_menu_refresh">Refresh</string>
    <string name="browser_menu_stop">Stop</string>
    <string name="browser_menu_bookmark" moz:removedIn="95" tools:ignore="UnusedResources">Bookmark</string>
    <string name="browser_menu_edit_bookmark" moz:removedIn="96" tools:ignore="UnusedResources">Edit bookmark</string>
    <string name="browser_menu_add_ons">Add-ons</string>
    <string name="browser_menu_extensions" moz:removedIn="96" tools:ignore="UnusedResources">Extensions</string>
    <string name="browser_menu_share">Share</string>
    <string name="search_suggestions_onboarding_allow_button">Allow</string>
    <string name="search_suggestions_onboarding_do_not_allow_button">Don’t allow</string>
    <string name="search_suggestions_onboarding_title">Allow search suggestions in private sessions?</string>
    <string name="search_suggestions_onboarding_text">%s will share everything you type in the address bar with your default search engine.</string>
    <string name="exceptions_empty_message_learn_more_link">Learn more</string>
    <string name="preferences_telemetry" moz:removedIn="96" tools:ignore="UnusedResources">Telemetry</string>
    <string name="preferences_crash_reporter" moz:removedIn="96" tools:ignore="UnusedResources">Crash reporter</string>
    <string name="preferences_mozilla_location_service" moz:removedIn="96" tools:ignore="UnusedResources">Mozilla location service</string>
    <string name="preferences_fenix_health_report" moz:removedIn="96" tools:ignore="UnusedResources">%s health report</string>
    <string name="bookmark_edit" moz:removedIn="95" tools:ignore="UnusedResources">Edit bookmark</string>
    <string name="bookmark_menu_open_in_new_tab_button">Open in new tab</string>
    <string name="bookmark_menu_open_in_private_tab_button">Open in private tab</string>
    <string name="bookmark_menu_delete_button">Delete</string>
    <string name="onboarding_tabs_layout_header">Choose your tabs tray layout</string>
    <string name="onboarding_tabs_tray_layout_description">Pick either the old Firefox (Fennec) style tabs screen or the new and fancy (Fenix) style tabs tray.</string>
    <string name="onboarding_tabs_tray_fennec_layout_button">Old Fennec style (default)</string>
    <string name="onboarding_tabs_tray_fennec_layout_description">Clicking the tab count on the toolbar will show you a tabs screen with a layout similar to the previous (Fennec) version of Firefox.</string>
    <string name="onboarding_tabs_tray_fenix_layout_button">New Fenix style</string>
    <string name="onboarding_tabs_tray_fenix_layout_description">Clicking the tab count on the toolbar will show you a new tabs tray layout from the Fenix version of Firefox.</string>
    <string name="sign_out_confirmation_message_2">%s will stop syncing with your account, but won’t delete any of your browsing data on this device.</string>
    <string name="sign_out_disconnect">Disconnect</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="preference_enhanced_tracking_protection">Enhanced Tracking Protection</string>
    <string name="enhanced_tracking_protection_details">Details</string>
    <string name="enhanced_tracking_protection_blocked">Blocked</string>
    <string name="etp_social_media_trackers_title">Social Media Trackers</string>
    <string name="etp_social_media_trackers_description">Limits the ability of social networks to track your browsing activity around the web.</string>
    <string name="etp_cookies_title">Cross-Site Tracking Cookies</string>
    <string name="etp_cookies_description">Blocks cookies that ad networks and analytics companies use to compile your browsing data across many sites.</string>
    <string name="etp_cryptominers_title">Cryptominers</string>
    <string name="etp_cryptominers_description">Prevents malicious scripts gaining access to your device to mine digital currency.</string>
    <string name="etp_fingerprinters_title">Fingerprinters</string>
    <string name="etp_fingerprinters_description">Stops uniquely identifiable data from being collected about your device that can be used for tracking purposes.</string>
    <string name="etp_tracking_content_title">Tracking Content</string>
    <string name="etp_tracking_content_description">Stops outside ads, videos, and other content from loading that contains tracking code. May affect some website functionality.</string>
    <string name="etp_panel_on">Protections are ON for this site</string>
    <string name="etp_panel_off">Protections are OFF for this site</string>
    <string name="browser_toolbar_long_press_popup_copy">Copy</string>
    <string name="browser_toolbar_long_press_popup_paste_and_go">Paste &amp; Go</string>
    <string name="browser_toolbar_long_press_popup_paste">Paste</string>
    <string name="login_menu_delete_button">Delete</string>
    <string name="login_menu_edit_button">Edit</string>
    <string name="login_options_menu">Login options</string>
</resources>