<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.SwitchPreference
            android:key="@string/pref_key_make_default_browser"
            android:title="@string/preferences_telemetry" />
    <androidx.preference.SwitchPreference
            android:key="@string/pref_key_make_default_browser"
            android:title="@string/preferences_crash_reporter" />
    <androidx.preference.SwitchPreference
            android:key="@string/pref_key_make_default_browser"
            android:title="@string/preferences_mozilla_location_service" />
    <androidx.preference.SwitchPreference
            android:key="@string/pref_key_make_default_browser"
            android:title="@string/preferences_fenix_health_report" />
</PreferenceScreen>