<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/copy"
        android:iconTint="?primaryText"
        android:title="@string/browser_toolbar_long_press_popup_copy"/>
    <item
        android:id="@+id/paste"
        android:iconTint="?primaryText"
        android:title="@string/browser_toolbar_long_press_popup_paste"/>
    <item
        android:id="@+id/paste_and_go"
        android:iconTint="?primaryText"
        android:title="@string/browser_toolbar_long_press_popup_paste_and_go"/>
</menu>