<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/edit_bookmark_multi_select"
        android:icon="@drawable/ic_edit"
        android:iconTint="@color/white_color"
        android:title="@string/bookmark_edit"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />
    <item
        android:id="@+id/open_bookmarks_in_new_tabs_multi_select"
        android:icon="@drawable/ic_new"
        android:iconTint="?primaryText"
        android:title="@string/bookmark_menu_open_in_new_tab_button"
        app:showAsAction="never"
        tools:targetApi="o" />
    <item
        android:id="@+id/open_bookmarks_in_private_tabs_multi_select"
        android:icon="@drawable/ic_new"
        android:iconTint="?primaryText"
        android:title="@string/bookmark_menu_open_in_private_tab_button"
        app:showAsAction="never"
        tools:targetApi="o" />
    <item
        android:id="@+id/delete_bookmarks_multi_select"
        android:icon="@drawable/ic_new"
        android:iconTint="?primaryText"
        android:title="@string/bookmark_menu_delete_button"
        app:showAsAction="never"
        tools:targetApi="o" />
</menu>
