<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding_card"
    style="@style/OnboardingCardLightWithPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:lines="1"
        android:text="@string/onboarding_tabs_layout_header"
        android:textAppearance="@style/HeaderTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/Body14TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        android:text="@string/onboarding_tabs_tray_layout_description" />


    <org.mozilla.fenix.onboarding.OnboardingRadioButton
        android:id="@+id/tabs_tray_fennec_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:checked="true"
        android:foreground="@drawable/rounded_ripple"
        android:gravity="top"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:theme="@style/Checkable.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text"
        app:onboardingKey="@string/pref_key_use_fullscreen_tabs_screen"
        app:onboardingKeyDescription="@string/onboarding_tabs_tray_fennec_layout_description"
        app:onboardingKeyTitle="@string/onboarding_tabs_tray_fennec_layout_button"
        tools:text="Standard" />

    <org.mozilla.fenix.onboarding.OnboardingRadioButton
        android:id="@+id/tabs_tray_fenix_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:checked="false"
        android:foreground="@drawable/rounded_ripple"
        android:gravity="top"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/primary_state_list_text_color"
        android:theme="@style/Checkable.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs_tray_fennec_style"
        app:onboardingKey="@string/pref_key_use_fenix_tabs_tray"
        app:onboardingKeyDescription="@string/onboarding_tabs_tray_fenix_layout_description"
        app:onboardingKeyTitle="@string/onboarding_tabs_tray_fenix_layout_button"
        tools:text="Strict" />
</androidx.constraintlayout.widget.ConstraintLayout>
