<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/info_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/search_suggestions_onboarding_title"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_suggestions_onboarding_text"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/learn_more"/>

    <TextView
        android:id="@+id/learn_more"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/accentHighContrast"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exceptions_empty_message_learn_more_link"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toTopOf="@id/allow"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/allow"
        style="@style/ThemeIndependentMaterialGreyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/search_suggestions_onboarding_allow_button"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/dismiss"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/search_suggestions_onboarding_do_not_allow_button"
        app:layout_constraintEnd_toStartOf="@id/allow"
        app:layout_constraintBottom_toBottomOf="@id/allow"
        app:layout_constraintTop_toTopOf="@id/allow"/>

</androidx.constraintlayout.widget.ConstraintLayout>