<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/cookieBannerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/tracking_protection_item_height"
        app:layout_constraintBottom_toTopOf="@id/trackingProtectionSwitch"
        app:layout_constraintTop_toTopOf="parent" />

    <org.mozilla.fenix.trackingprotection.SwitchWithDescription
        android:id="@+id/trackingProtectionSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="@dimen/tracking_protection_item_height"
        android:text="@string/preference_enhanced_tracking_protection"
        app:layout_constraintBottom_toTopOf="@id/trackingProtectionDetails"
        app:layout_constraintTop_toBottomOf="@id/cookieBannerItem"
        app:switchDescriptionOff="@string/etp_panel_off"
        app:switchDescriptionOn="@string/etp_panel_on"
        app:switchIconOff="@drawable/ic_tracking_protection_disabled"
        app:switchIconOn="@drawable/ic_tracking_protection_enabled"
        app:switchTitle="@string/preference_enhanced_tracking_protection" />

    <TextView
        android:id="@+id/trackingProtectionDetails"
        style="@style/QuickSettingsText.Icon"
        android:layout_width="0dp"
        android:layout_height="@dimen/quicksettings_item_height"
        android:layout_alignParentEnd="true"
        android:gravity="end|center_vertical"
        android:text="@string/enhanced_tracking_protection_details"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_arrowhead_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
